# weather_app

./: .gitignore  README.md  Weather_API.postman_collection.json  app.py  extensions.py  pyproject.toml  requirements.txt
models/: weather.py
routes/: weather_routes.py
service/: weather_service.py
